--- a/book/pom.xml
+++ b/book/pom.xml
@@ -98,10 +98,6 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 						<!-- Runtime Direct -->
 						<dependency>org.glassfish.web:jstl-impl</dependency>
 					</usedDependencies>
-					<ignoredUnusedDeclaredDependencies>
-						<!-- Dependency for dependencyversion-maven-plugin only -->
-						<dependency>com.semanticcms:semanticcms-core-servlet:pom</dependency>
-					</ignoredUnusedDeclaredDependencies>
 				</configuration>
 				<executions>
 					<!-- Add XML Schema resources -->
@@ -187,7 +183,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				<groupId>com.aoindustries</groupId><artifactId>ao-io-buffer</artifactId><version>3.3.0${POST-SNAPSHOT}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.aoindustries</groupId><artifactId>ao-lang</artifactId><version>4.8.0${POST-SNAPSHOT}</version>
+				<groupId>com.aoindustries</groupId><artifactId>ao-lang</artifactId><version>4.9.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
 			</dependency>
 			<dependency>
 				<groupId>com.aoindustries</groupId><artifactId>ao-net-types</artifactId><version>1.2.1${POST-SNAPSHOT}</version>
@@ -285,14 +281,6 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<dependency>
 			<groupId>org.glassfish.web</groupId><artifactId>jstl-impl</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-		<!-- Dependency for dependencyversion-maven-plugin only -->
-		<dependency>
-			<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.16.0-POST-SNAPSHOT</version>
-			<type>pom</type>
-			<scope>provided</scope>
-			<optional>true</optional>
-			<exclusions><exclusion><groupId>*</groupId><artifactId>*</artifactId></exclusion></exclusions>
 		</dependency>
 	</dependencies>
 </project>
