--- a/book/pom.xml
+++ b/book/pom.xml
@@ -112,7 +112,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.18.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+									<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.18.0${POST-SNAPSHOT}</version>
 									<type>jar</type>
 									<includes>com/semanticcms/core/servlet/books-1.0.xsd</includes>
 								</artifactItem>
@@ -122,7 +122,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				</executions>
 				<dependencies>
 					<dependency>
-						<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.18.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+						<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.18.0${POST-SNAPSHOT}</version>
 						<type>jar</type>
 					</dependency>
 				</dependencies>
@@ -268,7 +268,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-model</artifactId><version>1.14.0${POST-SNAPSHOT}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.18.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+				<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.18.0${POST-SNAPSHOT}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.semanticcms</groupId><artifactId>semanticcms-news-model</artifactId><version>1.2.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
