--- a/book/pom.xml
+++ b/book/pom.xml
@@ -139,6 +139,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 					<dependency>
 						<groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.18.0${POST-SNAPSHOT}</version>
 						<type>jar</type>
+						<exclusions><exclusion><groupId>*</groupId><artifactId>*</artifactId></exclusion></exclusions>
 					</dependency>
 				</dependencies>
 			</plugin>
