--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 / <a target="${javadoc.target}" href="${project.url}">Servlet</a>]]></javadoc.breadcrumbs>
 		<!-- SonarQube -->
 		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
-		<sonar.organization>aoindustries</sonar.organization>
+		<sonar.organization>ao-apps</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<!-- TODO: Implement tests -->
 		<sonar.coverage.exclusions>**.*</sonar.coverage.exclusions>
@@ -76,20 +76,20 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 	</developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/aoindustries/semanticcms-core-servlet.git</connection>
-		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-core-servlet.git</developerConnection>
-		<url>https://github.com/aoindustries/semanticcms-core-servlet</url>
+		<connection>scm:git:git://github.com/ao-apps/semanticcms-core-servlet.git</connection>
+		<developerConnection>scm:git:git@github.com:ao-apps/semanticcms-core-servlet.git</developerConnection>
+		<url>https://github.com/ao-apps/semanticcms-core-servlet</url>
 		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
 		<system>GitHub Issues</system>
-		<url>https://github.com/aoindustries/semanticcms-core-servlet/issues</url>
+		<url>https://github.com/ao-apps/semanticcms-core-servlet/issues</url>
 	</issueManagement>
 
 	<ciManagement>
 		<system>GitHub Actions</system>
-		<url>https://github.com/aoindustries/semanticcms-core-servlet/actions</url>
+		<url>https://github.com/ao-apps/semanticcms-core-servlet/actions</url>
 	</ciManagement>
 
 	<repositories>
